// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EmptyState ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="css-987v97"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1cvb89y-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row css-mw40vo-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-46cnn2-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1qmreon-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-1sctphu-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="css-987v97"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1cvb89y-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row css-mw40vo-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-46cnn2-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-yfpddg-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-eb5jj6-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="css-987v97"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-qgv6kg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row css-zc7a4-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-bln21j-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1cp3jhq-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-19y9tt6-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="css-987v97"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-qgv6kg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row css-zc7a4-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1d8tdwu-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1rics5i-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1cjdkrq-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
    </button>
  </div>
</div>
`;
